--- a/style.css
+++ b/style.css
@@ -1,205 +1,57 @@
-/* Your existing CSS styles */
-
 /* New styles for clock hands */
 .hand {
     position: absolute;
     background: #000;
-    transform-origin: center;
-  }
-  
+    position: absolute;
+    background: #000;
+    /* Set the rotation point to the bottom center */
+    transform-origin: 50% 100%; 
+    left: 49%;
+    bottom: 50%;
+    }
+  /*Sets the color and size of the hour hand.*/
   .hour-hand {
-    width: 6px;
-    height: 50px;
+    width: 9px;
+    height: 90px;
     z-index: 1;
     background-color: #000;
   }
-  
-  .min-hand {
-    width: 4px;
-    height: 70px;
-    z-index: 2;
-    background-color: #000;
-  }
-  
-  .second-hand {
-    width: 2px;
-    height: 80px;
-    z-index: 3;
-    background-color: #ff0000;
-  }
-  /* Center the clock */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-  }
-  
-  .clock {
-    /* Additional styling for the clock container */
-    width: 200px; /* Set the desired width */
-    height: 200px; /* Set the desired height */
-    border: 2px solid #000;
-    border-radius: 50%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-/* Center the clock */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: bisque;
-  }
-  
-  .clock {
-    /* Additional styling for the clock container */
-    width: 400px; /* Set the desired width */
-    height: 400px; /* Set the desired height */
-    border: 0px solid #000;
-    border-radius: 50%;
-    position: relative;
-    background: url(clock_noBG.png) no-repeat center;
-    background-size: cover;
-  }
-  
-  /* Styles for clock hands */
-  .hand {
-    position: absolute;
-    background: #000;
-    transform-origin: 50% 100%; /* Set the rotation point to the bottom center */
-    left: 49%;
-    bottom: 50%;
-  }
-  
-  
-  
+  /*Sets the color and size of the minute hand.*/
   .min-hand {
     width: 6px;
     height: 130px;
     z-index: 2;
+    background-color: #000;
   }
-  
+  /*Sets the color and size of the second hand.*/
   .second-hand {
     width: 4px;
     height: 140px;
     z-index: 3;
     background-color: #ff0000;
   }
-
-  .hour-hand {
-    width: 9px;
-    height: 90px;
-    z-index: 1;
+  /* Center the clock and create the colorful background*/
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-image: linear-gradient(to bottom right,beige, palegoldenrod, 
+    navajowhite, moccasin, white, wheat, bisque,cornsilk, white);
   }
   
-/* Adjusted positioning for markings */
-.marking {
-    width: 2px;
-    height: 10px;
-    top: 5%;
-    left: 50%;
-    transform-origin: 50% 100%;
-  }
-  
-  .marking:nth-child(1) {
-    transform: rotate(30deg);
-  }
-  
-  .marking:nth-child(2) {
-    transform: rotate(60deg);
-  }
-  
-  .marking:nth-child(3) {
-    transform: rotate(90deg);
-  }
-  
-  .marking:nth-child(4) {
-    transform: rotate(120deg);
-  }
-  
-  .marking:nth-child(5) {
-    transform: rotate(150deg);
-  }
-  
-  .marking:nth-child(6) {
-    transform: rotate(180deg);
-  }
-  
-  .marking:nth-child(7) {
-    transform: rotate(210deg);
-  }
-  
-  .marking:nth-child(8) {
-    transform: rotate(240deg);
-  }
-  
-  .marking:nth-child(9) {
-    transform: rotate(270deg);
-  }
-  
-  .marking:nth-child(10) {
-    transform: rotate(300deg);
-  }
-  
-  .marking:nth-child(11) {
-    transform: rotate(330deg);
-  }
-  
-  .marking:nth-child(12) {
-    transform: rotate(0deg);
-  }
-  
-  
-/*
-
-#clockContainer {
+  .clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* Additional styling for the clock container */
+    width: 400px; /* Set the desired width */
+    height: 400px; /* Set the desired height */
+    border: 0px solid #000;
+    border-radius: 50%;
     position: relative;
-    margin: auto;
-    height: 40vw;
-             //to make the height and width responsive
-    width: 40vw;
-    background: url(clock.png) no-repeat;
-             //setting our background image 
-    background-size: 100%;
-}
- 
-#hour,
-#minute,
-#second {
-    position: absolute;
-    background: black;
-    border-radius: 10px;
-    transform-origin: bottom;
-}
- 
-#hour {
-    width: 1.8%;
-    height: 25%;
-    top: 25%;
-    left: 48.85%;
-    opacity: 0.8;
-}
- 
-#minute {
-    width: 1.6%;
-    height: 30%;
-    top: 19%;
-    left: 48.9%;
-    opacity: 0.8;
-}
- 
-#second {
-    width: 1%;
-    height: 40%;
-    top: 9%;
-    left: 49.25%;
-    opacity: 0.8;
-}
-
-*/
+    /*Background image of the inner Clock*/
+    background: url(clock_noBG.png) no-repeat center;
+    background-size: cover;
+  } 
